fixed broken on mobile bug

--- a/app/main.scss
+++ b/app/main.scss
@@ -15,6 +15,14 @@ html, body {
 	height: 100%;
 }
 
+body.pointer {
+	cursor: pointer !important;
+}
+
+* {
+	-webkit-tap-highlight-color: transparent;
+}
+
 .background__desert {
 	background-image: url('../images/background-desktop.jpg');
 	background-size: cover;
